@@ -2,6 +2,7 @@ Version 1.43:
 	- Made the GMP library mandatory
 	- Deleted the ancient unskewed polynomial selector
 	- Modified the batch factoring code to use GMP
+	- Added float.h for unix builds (thanks Christian Cornelssen)
 
 
 Version 1.42: 7/19/09
